--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "express": "^4.13.4",
+    "lodash": "^4.8.2",
     "morgan": "^1.7.0",
     "request": "^2.70.0"
   },
