--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Interview - Backend Node",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "eslint main.js",
     "start": "node main.js"
   },
   "author": "Steven Bell for CNNLabs",
@@ -12,10 +12,16 @@
     "node": "5.8.0"
   },
   "dependencies": {
+    "eslint": "^2.7.0",
     "express": "^4.13.4",
     "lodash": "^4.8.2",
     "morgan": "^1.7.0",
     "request": "^2.70.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^2.7.0",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-plugin-promise": "^1.1.0",
+    "eslint-plugin-standard": "^1.3.2"
+  }
 }
