--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "request": "^2.70.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "eslint": "^2.7.0",
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.1.0",
-    "eslint-plugin-standard": "^1.3.2"
+    "eslint-plugin-standard": "^1.3.2",
+    "mocha": "^2.4.5",
+    "supertest": "^1.2.0"
   }
 }
