--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.1.0",
     "eslint-plugin-standard": "^1.3.2",
-    "mocha": "^2.4.5",
-    "supertest": "^1.2.0"
+    "mocha": "^2.4.5"
   }
 }
